--- a/formats.css
+++ b/formats.css
@@ -41,6 +41,32 @@ body
     width: 100%;
 }
 
+.footer
+{
+    background-color: var(--grey);
+    width: 100%;
+    flex-grow: 3;
+}
+
+.footer div
+{
+    display: inline-block;
+    vertical-align: top;
+    font-size: 12px;
+    color: var(--white);
+}
+
+.footer-links
+{
+    margin-left: 10px;
+}
+
+.footer-contacts
+{
+    margin-right: 535px;
+    margin-left: 535px;
+}
+
 .title
 {
     vertical-align: top;
@@ -54,4 +80,139 @@ body
 {
     height: 140px;
     width: auto;
+}
+
+.page-selection
+{
+    display: inline;
+}
+
+.page-selection ul
+{
+    float: right;
+    list-style-type: none;
+    margin: 0px;
+    padding-right: 5px;
+    padding-top: 115px;
+}
+
+.page-selection li
+{
+    display: inline-block;
+    font-size: 20px;
+    font: bold;
+}
+
+.page-selection a
+{
+    text-decoration: none;
+    color: var(--white);
+}
+
+.page-selection li a:hover
+{
+    background-color: var(--dark-red);
+}
+
+.page-selection-burger-menu li
+{
+    font-size: 20px;
+    font: bold;
+}
+
+.page-selection-burger-menu ul
+{
+    float: right;
+    list-style-type: none;
+    background-color: var(--red);
+    margin-top: 0px;
+    padding: 5px;
+}
+
+.page-selection-burger-menu a
+{
+    text-decoration: none;
+    color: var(--white);
+}
+
+.page-selection-burger-menu li a:hover
+{
+    background-color: var(--dark-red);
+}
+
+.hide
+{
+    display: none;
+}
+
+.burger-menu
+{
+    display: none;
+    cursor: pointer;
+    float: right;
+    margin-top: 50px;
+    margin-right: 15px;
+    padding: 5px;
+}
+
+
+
+.bar1, .bar2, .bar3
+{
+    width: 35px;
+    height: 5px;
+    background-color: var(--white);
+    margin: 6px 0;
+}
+
+@media only screen and (max-width: 875px)
+{
+    .burger-menu
+    {
+        display: block;
+    }
+
+    .title
+    {
+        font-size: 27px;
+    }
+
+    .logo
+    {
+        height: 125px;
+        
+    }
+
+    .page-selection
+    {
+        display: none;
+    }
+
+    @media only screen and (max-width: 592px)
+    {
+        .title
+        {
+            font-size: 22px;
+        }
+    
+        .logo
+        {
+            height: 100px;
+            margin-top: 15px;
+        } 
+
+        @media only screen and (max-width: 490px)
+        {
+            .title
+            {
+                font-size: 17px;
+            }
+        
+            .logo
+            {
+                height: 80px;
+                margin-top: 20px;
+            } 
+        }
+    }
 }
