--- a/formats.css
+++ b/formats.css
@@ -43,31 +43,37 @@ body
 
 .footer
 {
+    position: fixed;
+    bottom: 0;
     background-color: var(--grey);
     width: 100%;
-    flex-grow: 3;
+    text-align: center;
 }
 
-.footer div
+.footer-headings
 {
     display: inline-block;
-    vertical-align: top;
-    font-size: 12px;
+    width: 20%;
     color: var(--white);
+    font-size: 15px;
+    text-align: left;
+    vertical-align: top;
+    margin-bottom: 15px;
 }
 
-.footer-links
+.footer-headings p
 {
-    margin-left: 10px;
+    margin: 5px;
 }
 
-.footer-contacts
+.su-link
 {
-    margin-right: 535px;
-    margin-left: 535px;
+    list-style-type: none;
+    color: var(--blue);
+    font-size: 18px;
 }
 
-.title
+.site-title
 {
     vertical-align: top;
     margin-top: 50px;
@@ -155,8 +161,6 @@ body
     padding: 5px;
 }
 
-
-
 .bar1, .bar2, .bar3
 {
     width: 35px;
@@ -165,16 +169,46 @@ body
     margin: 6px 0;
 }
 
+.home-container
+{
+    display: block;
+    width: 60%;
+    margin: 16px auto;
+}
+
+.page-title
+{
+    color: var(--grey);
+    font-size: 30px;
+    text-align: center;
+}
+
+.product-images
+{
+    display: inline-block;
+    width: 200px;
+}
+
 @media only screen and (max-width: 875px)
 {
+    .footer-headings
+    {
+        font-size: 11px;
+    }
+
     .burger-menu
     {
         display: block;
     }
 
-    .title
+    .site-title
     {
         font-size: 27px;
+    }
+
+    .page-title
+    {
+        font-size: 22px;
     }
 
     .logo
@@ -188,11 +222,26 @@ body
         display: none;
     }
 
+    .home-container
+    {
+        width: 80%;
+    }
+
     @media only screen and (max-width: 592px)
     {
-        .title
+        .footer-headings
+        {
+            font-size: 10px;
+        }
+
+        .site-title
         {
             font-size: 22px;
+        }
+
+        .page-title
+        {
+            font-size: 17px;
         }
     
         .logo
@@ -201,11 +250,29 @@ body
             margin-top: 15px;
         } 
 
+        .home-container
+        {
+            width: 90%;
+        }
+
+        .home-content
+        {
+            font-size: 15px;
+        }
         @media only screen and (max-width: 490px)
         {
-            .title
+            .footer-headings
+            {
+                font-size: 9px;
+            }
+            .site-title
             {
                 font-size: 17px;
+            }
+
+            .page-title
+            {
+                font-size: 15px;
             }
         
             .logo
@@ -213,6 +280,16 @@ body
                 height: 80px;
                 margin-top: 20px;
             } 
+
+            .home-container
+            {
+                width: 95%;
+            }
+
+            .home-content
+            {
+                font-size: 13px;
+            }
         }
     }
 }
