--- a/formats.css
+++ b/formats.css
@@ -70,7 +70,7 @@ body
 {
     list-style-type: none;
     color: var(--blue);
-    font-size: 18px;
+    font-size: 15px;
 }
 
 .site-title
@@ -209,7 +209,7 @@ body
 
     .su-link
     {
-        font-size: 16px;
+        font-size: 11px;
     }
 
     .footer-headings
@@ -250,6 +250,12 @@ body
 
     @media only screen and (max-width: 592px)
     {
+        .video
+        {
+            width: 100%;
+            height: 30%;
+        }
+
         .video-title
         {
             font-size: 18px;
@@ -257,7 +263,7 @@ body
 
         .su-link
         {
-            font-size: 14px;
+            font-size: 10px;
         }
 
         .footer-headings
@@ -292,6 +298,11 @@ body
         }
         @media only screen and (max-width: 490px)
         {
+            .video
+            {
+                height: 20%
+            }
+
             .video-title
             {
                 font-size: 13px;
@@ -299,7 +310,7 @@ body
 
             .su-link
             {
-                font-size: 12px;
+                font-size: 9px;
             }
 
             .footer-headings
@@ -331,6 +342,39 @@ body
             .home-content
             {
                 font-size: 13px;
+            }
+
+            @media only screen and (max-width: 415px)
+            {
+                .video
+                {
+                    height: 20%
+                }
+
+                .site-title
+                {
+                    font-size: 13px;
+                }
+
+                .footer
+                {
+                    height: 15%; 
+                }
+
+                .footer-headings
+                {
+                    font-size: 5px;
+                }
+
+                .su-link
+                {
+                    font-size: 5px;
+                }
+
+                .page-selection-burger-menu li
+                {
+                    font-size: 12px;
+                }
             }
         }
     }
