--- a/formats.css
+++ b/formats.css
@@ -246,11 +246,22 @@ body
 
 .buy
 {
-    color: var(--dark-red);
-    display: block;
-    text-align: center;
+    padding: 10px 15px;
+    background-color: var(--grey);
+    color: var(--white);
+    width: 100%;
+    margin: 0 auto;
+    border: none;
     font-weight: 700;
+    text-align: center;
     font-size: 18px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.buy:hover
+{
+    background-color: #2c4257; 
 }
 
 @media only screen and (max-width: 1020px)
