--- a/formats.css
+++ b/formats.css
@@ -17,6 +17,7 @@
     --olive: #9BCB4E;
     --light-sky: #A4D3F2;
     --cloud: #C7CBDA; 
+    --dark-blue: #2c4257;
 }
 
 * 
@@ -48,6 +49,8 @@ body
     background-color: var(--grey);
     width: 100%;
     text-align: center;
+    position: sticky;
+    bottom: 0;
 }
 
 .footer-headings
@@ -241,7 +244,7 @@ body
 
 .read-more
 {
-    color: var(--black);
+    color: var(--red);
 }
 
 .buy
@@ -261,7 +264,31 @@ body
 
 .buy:hover
 {
-    background-color: #2c4257; 
+    background-color: var(--dark-blue); 
+}
+
+.prod-nav ul
+{
+    list-style-type: none;
+}
+
+.prod-nav li
+{
+    display: inline-block;
+}
+
+.prod-nav a 
+{
+    color: var(--blue);
+    text-decoration: none;
+}
+
+.back-to-top
+{
+    color: var(--blue);
+    display: block;
+    position: fixed;
+    padding-left: 40px;
 }
 
 @media only screen and (max-width: 1020px)
