--- a/formats.css
+++ b/formats.css
@@ -291,6 +291,96 @@ body
     padding-left: 40px;
 }
 
+.cart
+{
+    display: block;
+    width: 60%;
+    margin: 16px auto;
+}
+
+.cart-title
+{
+    color: var(--gold);
+    text-align: left;
+    font-size: 25px;
+}
+
+.cart-content
+{
+    display: flex;
+    background-color: var(--light-sky);
+    flex-wrap: wrap;
+}
+
+.cart-prod-img
+{
+    display: inline-block;
+    margin-top: 20px;
+    width: 75%;
+}
+
+.cart-prod
+{
+    display: inline-block;
+    text-align: center;
+    color: var(--dark-blue);
+    font-weight: 700;
+}
+
+.item-num
+{
+    display: inline-block;
+    color: var(--dark-blue);
+    font-weight: 700;
+    vertical-align: middle;
+}
+
+.cart-price
+{
+    display: inline-block;
+    color: var(--dark-blue);
+    font-weight: 700;
+}
+
+.item1
+{
+    display: block;
+    max-height: 200px;
+}
+
+.item1 div
+{
+    display: inline-block;
+    width: 24%;
+    height: 100%;
+}
+
+.item2
+{
+    display: block;
+    max-height: 200px;
+}
+
+.item2 div
+{
+    display: inline-block;
+    width: 24%;
+    height: 100%;
+}
+
+.item3
+{
+    display: block;
+    max-height: 200px;
+}
+
+.item3 div
+{
+    display: inline-block;
+    width: 24%;
+    height: 100%;
+}
+
 @media only screen and (max-width: 1020px)
 {
     .video
