--- a/formats.css
+++ b/formats.css
@@ -308,77 +308,73 @@ body
 .cart-content
 {
     display: flex;
-    background-color: var(--light-sky);
+    flex-direction: row;
     flex-wrap: wrap;
 }
 
 .cart-prod-img
 {
-    display: inline-block;
-    margin-top: 20px;
-    width: 75%;
+    display: flex;
+    width: 21%;
 }
 
 .cart-prod
 {
-    display: inline-block;
+    display: block;
     text-align: center;
     color: var(--dark-blue);
     font-weight: 700;
+    margin-bottom: 0;
 }
 
 .item-num
 {
-    display: inline-block;
+    display: flex;
+    flex-direction: row;
     color: var(--dark-blue);
     font-weight: 700;
-    vertical-align: middle;
+    width: 8%;
 }
 
 .cart-price
 {
-    display: inline-block;
+    display: flex;
+    flex-direction: row;
     color: var(--dark-blue);
     font-weight: 700;
+    width: 10%;
 }
 
-.item1
+.remove
 {
-    display: block;
+    display: flex;
+    flex-direction: row;
+    background-color: var(--red);
+    color: var(--white);
+    padding: 5px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.remove:hover
+{
+    background-color: var(--dark-red);
+}
+
+.item
+{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
     max-height: 200px;
+    margin-bottom: 10px;
+    background-color: var(--white);
+    border: var(--black) solid 2px;
 }
 
-.item1 div
+.item >*
 {
-    display: inline-block;
-    width: 24%;
-    height: 100%;
-}
-
-.item2
-{
-    display: block;
-    max-height: 200px;
-}
-
-.item2 div
-{
-    display: inline-block;
-    width: 24%;
-    height: 100%;
-}
-
-.item3
-{
-    display: block;
-    max-height: 200px;
-}
-
-.item3 div
-{
-    display: inline-block;
-    width: 24%;
-    height: 100%;
+    margin-block: auto;
 }
 
 @media only screen and (max-width: 1020px)
