--- a/formats.css
+++ b/formats.css
@@ -365,6 +365,18 @@ body
     background-color: var(--dark-red);
 }
 
+.remove-all
+{
+    display: flex;
+    flex-direction: row;
+    background-color: var(--red);
+    color: var(--white);
+    padding: 5px;
+    cursor: pointer;
+    transition: 0.3s;
+    border: none;
+}
+
 .item-card
 {
     display: flex;
