--- a/formats.css
+++ b/formats.css
@@ -532,6 +532,8 @@ Setting a bottom border, font size, colour and alligning the text to the centre*
     width: 30%;
     height: auto;
     background-color: var(--silver);
+    border-radius: 20px;
+    border: var(--black) solid 2px;
 }
 
 .offer-title
@@ -568,6 +570,35 @@ Setting a bottom border, font size, colour and alligning the text to the centre*
 {
     font-size: 20px;
     padding: 5px;
+    border-radius: 25px;
+}
+
+.login-container
+{
+    display: block;
+    text-align: center;
+    margin: 10px;
+}
+
+.login-container label
+{
+    font-size: 20px;
+}
+
+.login-container input
+{
+    font-size: 20px;
+}
+
+.login
+{
+    text-align: center;
+    font-size: 20px;
+    background-color: var(--red);
+    color: var(--white);
+    margin: 10px;
+    width: 100px;
+    padding: 7px;
     border-radius: 25px;
 }
 
