--- a/formats.css
+++ b/formats.css
@@ -465,8 +465,8 @@ Setting a size and centering it*/
 .rm-prod-img
 {
     display: block;
-    height: 40%;
-    max-width: 95%;
+    height: auto;
+    max-width: 100%;
     align-self: center;
 }
 
@@ -556,14 +556,10 @@ Setting a bottom border, font size, colour and alligning the text to the centre*
     margin-top: 20px;
 }
 
-.search-bar a
+.search-button
 {
-    font-size: 20px;
     background-color: var(--red);
     color: var(--white);
-    padding: 7px;
-    border-radius: 25px;
-    text-decoration: none;
 }
 
 .search-bar input
@@ -950,7 +946,7 @@ This is so then the content adapts to the size of the screen accordingly*/
 
             .prod-nav
             {
-                font-size: 14px;
+                font-size: 18px;
             }
 
             .rm-prod-title
